# Picidae

./: .clang-format  .gitignore  CMakeLists.txt  README.md  bk.clang-tidy  xmake.lua
.cache/clangd/index/: common.hpp.B9EB807F8FF25759.idx  common_macro_test.cc.7328FC344B0EC60B.idx  cpplisp.hpp.AA8C7AF7DA0B0662.idx  cpplisp_test.cc.FC96A0FF42740AFC.idx  debug.hpp.78D313117883EC33.idx  macro.hpp.C09DD88CA3A4B3FB.idx  meta.hpp.7A147A04F9CCE197.idx  meta_test.cc.D22CA625B3E9864C.idx
picidae/: common.h  debug.h
picidae/core/: any.hpp  arena.hpp  common.hpp  iterator_range.hpp  nonnull.hpp  small_vector.hpp  stlforwardcompat.hpp  uniquevector.hpp
picidae/cpplisp/: cpplisp.hpp
picidae/date/: date.hpp
picidae/date/detail/: common.hpp  day.hpp  format.hpp  month.hpp  month_day.hpp  month_weekday.hpp  operator.hpp  stream.hpp  weekday.hpp  year.hpp  year_month.hpp  year_month_day.hpp
picidae/json/: json.hpp
picidae/json/detail/: parse_number.hpp
picidae/koala/: ReadMe.md  koala.hpp
picidae/koala/koala/: bind_first.hpp  bootstrap.hpp  boxed_cast.hpp  boxed_number.hpp  boxed_value.hpp  callable_traits.hpp  cpplisp.hpp  define.hpp  exception.hpp  function_call.hpp  function_params.hpp  function_signature.hpp  handle_return.hpp  type_info.hpp  (+11 more)
picidae/lightweighttest/: lightweighttest.hpp
picidae/meta/: common.hpp  debug.hpp  default.hpp  descr.hpp  macro.h  macro.hpp  meta.hpp  tag_of.hpp  when.hpp
picidae/parse/: packet_token.hpp  token_base.hpp
picidae/stl/: stl.hpp
picidae/utility/: stream.hpp
test/: CMakeLists.txt  common_macro_test.cc  common_macro_test.cpp  cpplisp_test.cc  lightweighttest_test.cc  meta_test.cc  xmake.lua
test/core_unittest/: any_test.cc  core_test.cc
test/date_unittest/: date_unittest.cc
test/json_unittest/: json_unittest.cc
test/koala_unittests/: boxed_number_test.cc  boxed_value_test.cc  define_test.cc  function_params_test.cc  type_info_test.cc  xmake.lua
test/meta_unittest/: default_unittest.cc  tag_of_unittest.cc  when_unittest.cc
(+12 files in other folders)
